force-app/main/default/objects/Risk_Snapshot__c/Risk_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Object to capture a snapshot of the risk register record</description>
    <label>Risk Snapshot</label>
    <nameField>
        <displayFormat>RS-{00000}</displayFormat>
        <label>Risk Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>