force-app/main/default/objects/Risk_Snapshot__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <description>Cause captured when Risk Snapshot record is created</description>
    <label>Cause</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>