force-app/main/default/objects/Risk_Snapshot__c/fields/Contingency_Plans__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Plans__c</fullName>
    <description>Contingency Plans captured when Risk Snapshot record is created</description>
    <label>Contingency Plans</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>