force-app/main/default/objects/Risk_Snapshot__c/fields/Current_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_Score__c</fullName>
    <description>Current Score captured when Risk Snapshot record is created</description>
    <label>Current Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>