force-app/main/default/objects/Risk_Snapshot__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <description>Date Closed captured when Risk Snapshot record is created</description>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>