force-app/main/default/objects/Risk_Snapshot__c/fields/Effect__c.field-meta.xml
<CustomField>
    <fullName>Effect__c</fullName>
    <description>Effect captured when Risk Snapshot record is created</description>
    <label>Effect</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>