force-app/main/default/objects/Risk_Snapshot__c/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <description>Escalation captured when Risk Snapshot record is created</description>
    <label>Escalation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>