force-app/main/default/objects/Risk_Snapshot__c/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Funding Award captured when Risk Snapshot record is created</description>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Risk Snapshots</relationshipLabel>
    <relationshipName>Risk_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>