force-app/main/default/objects/Risk_Snapshot__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>Impact captured when Risk Snapshot record is created</description>
    <label>Impact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>