force-app/main/default/objects/Risk_Snapshot__c/fields/Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>Impact_Score__c</fullName>
    <description>Impact score captured when Risk Snapshot record is created</description>
    <label>Impact Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>