force-app/main/default/objects/Risk_Snapshot__c/fields/Inherent_Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>Inherent_Impact_Score__c</fullName>
    <description>Inherent Impact Score captured when Risk Snapshot record is created</description>
    <label>Inherent Impact Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>