force-app/main/default/objects/Risk_Snapshot__c/fields/Inherent_Risk__c.field-meta.xml
<CustomField>
    <fullName>Inherent_Risk__c</fullName>
    <description>(Inherent Risk) RAG captured when Risk Snapshot record is created</description>
    <label>Inherent Risk</label>
    <length>10</length>
    <type>Text</type>
</CustomField>