force-app/main/default/objects/Risk_Snapshot__c/fields/Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Likelihood__c</fullName>
    <description>Likelihood captured when Risk Snapshot record is created</description>
    <label>Likelihood</label>
    <length>100</length>
    <type>Text</type>
</CustomField>