force-app/main/default/objects/Risk_Snapshot__c/fields/Likelihood_Score__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_Score__c</fullName>
    <description>Likelihood Score captured when Risk Snapshot record is created</description>
    <label>Likelihood Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>