force-app/main/default/objects/Risk_Snapshot__c/fields/Materialised_Date__c.field-meta.xml
<CustomField>
    <fullName>Materialised_Date__c</fullName>
    <description>Materialised Date captured when Risk Snapshot record is created</description>
    <label>Materialised Date</label>
    <type>Date</type>
</CustomField>