force-app/main/default/objects/Risk_Snapshot__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>Month captured when Risk Snapshot record is created</description>
    <label>Month</label>
    <length>100</length>
    <type>Text</type>
</CustomField>