force-app/main/default/objects/Risk_Snapshot__c/fields/Parent_Funding_Award_Update__c.field-meta.xml
<CustomField>
    <fullName>Parent_Funding_Award_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Update record captured when Risk Snapshot record is created</description>
    <label>Parent Funding Award Update</label>
    <referenceTo>FundingAwardUpdate__c</referenceTo>
    <relationshipLabel>Risk Snapshots</relationshipLabel>
    <relationshipName>Risk_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>