force-app/main/default/objects/Risk_Snapshot__c/fields/Planned_Actions__c.field-meta.xml
<CustomField>
    <fullName>Planned_Actions__c</fullName>
    <description>Planned Actions captured when Risk Snapshot record is created</description>
    <label>Planned Actions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>