force-app/main/default/objects/Risk_Snapshot__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <description>Probability % captured when Risk Snapshot record is created</description>
    <label>Probability %</label>
    <length>100</length>
    <type>Text</type>
</CustomField>