force-app/main/default/objects/Risk_Snapshot__c/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <description>Risk captured when Risk Snapshot record is created</description>
    <label>Risk</label>
    <length>100</length>
    <type>Text</type>
</CustomField>