force-app/main/default/objects/Risk_Snapshot__c/fields/Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Risk_Category__c</fullName>
    <description>Risk Category	captured when Risk Snapshot record is created</description>
    <label>Risk Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>