force-app/main/default/objects/Risk_Snapshot__c/fields/Risk_Category_Other_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Risk_Category_Other_if_applicable__c</fullName>
    <description>Risk Category - Other (if applicable) captured when Risk Snapshot record is created</description>
    <label>Risk Category - Other (if applicable)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>