force-app/main/default/objects/Risk_Snapshot__c/fields/Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>Risk_Description__c</fullName>
    <description>Risk Description captured when Risk Snapshot record is created</description>
    <label>Risk Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>