force-app/main/default/objects/Risk_Snapshot__c/fields/Risk_ID__c.field-meta.xml
<CustomField>
    <fullName>Risk_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk ID</label>
    <referenceTo>Risk_Register__c</referenceTo>
    <relationshipLabel>Risk Snapshots</relationshipLabel>
    <relationshipName>Risk_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>