force-app/main/default/objects/Risk_Snapshot__c/fields/Risk_Owner__c.field-meta.xml
<CustomField>
    <fullName>Risk_Owner__c</fullName>
    <description>Risk Owner captured when Risk Snapshot record is created</description>
    <label>Risk Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>