force-app/main/default/objects/Risk_Snapshot__c/fields/Risk_Register_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Register_Level__c</fullName>
    <description>Risk Register Level	captured when Risk Snapshot record is created</description>
    <label>Risk Register Level</label>
    <length>100</length>
    <type>Text</type>
</CustomField>