force-app/main/default/objects/Risk_Snapshot__c/fields/Risk_Reporting_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reporting_Period_Start_Date__c</fullName>
    <label>Risk Reporting Period Start Date</label>
    <type>Date</type>
</CustomField>