force-app/main/default/objects/Risk_Snapshot__c/fields/Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status__c</fullName>
    <description>Risk Status captured when Risk Snapshot record is created</description>
    <label>Risk Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>