force-app/main/default/objects/Risk_Snapshot__c/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <description>Risk Type captured when Risk Snapshot record is created</description>
    <label>Risk Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>