force-app/main/default/objects/Risk_Snapshot__c/fields/Scheme_Affected__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Affected__c</fullName>
    <description>Scheme Affected captured when Risk Snapshot record is created</description>
    <label>Scheme Affected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>