force-app/main/default/objects/Risk_Snapshot__c/fields/Scheme_Risk_Category__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Risk_Category__c</fullName>
    <description>Scheme Risk Category captured when Risk Snapshot record is created</description>
    <label>Scheme Risk Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>