force-app/main/default/objects/Risk_Snapshot__c/fields/Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Status_Update__c</fullName>
    <description>Status Update	captured when Risk Snapshot record is created</description>
    <label>Status Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>