force-app/main/default/objects/Risk_Snapshot__c/fields/Trend__c.field-meta.xml
<CustomField>
    <fullName>Trend__c</fullName>
    <description>Trend captured when Risk Snapshot record is created</description>
    <label>Trend</label>
    <length>100</length>
    <type>Text</type>
</CustomField>