force-app/main/default/objects/Risk_Snapshot__c/recordTypes/Award.recordType-meta.xml
<RecordType>
    <fullName>Award</fullName>
    <active>true</active>
    <description>Grant level risk snapshot</description>
    <label>Award</label>
</RecordType>