force-app/main/default/objects/Risk_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Risk_ID__c</columns>
    <columns>Risk__c</columns>
    <columns>Current_Score__c</columns>
    <columns>Trend__c</columns>
    <columns>Risk_Type__c</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Snapshot_Month__c</columns>
    <columns>Funding_Award__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>