force-app/main/default/objects/Risk_Snapshot__c/listViews/Award_Risk_Snapshots.listView-meta.xml
<ListView>
    <fullName>Award_Risk_Snapshots</fullName>
    <columns>NAME</columns>
    <columns>Risk_ID__c</columns>
    <columns>Risk_Type__c</columns>
    <columns>Inherent_Risk__c</columns>
    <columns>Risk__c</columns>
    <columns>Current_Score__c</columns>
    <columns>Trend__c</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Snapshot_Month__c</columns>
    <columns>Funding_Award__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Risk_Snapshot__c.Award</value>
    </filters>
    <label>Award Risk Snapshots</label>
</ListView>