force-app/main/default/objects/Risk_Snapshot__c/listViews/Scheme_Risk_Snapshots.listView-meta.xml
<ListView>
    <fullName>Scheme_Risk_Snapshots</fullName>
    <columns>NAME</columns>
    <columns>Risk_ID__c</columns>
    <columns>Risk_Type__c</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Snapshot_Month__c</columns>
    <columns>Scheme_Risk_Category__c</columns>
    <columns>Scheme_Affected__c</columns>
    <columns>Risk__c</columns>
    <columns>Current_Score__c</columns>
    <columns>Trend__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Risk_Snapshot__c.Scheme</value>
    </filters>
    <label>Scheme Risk Snapshots</label>
</ListView>